--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,8 +13,7 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="Transparent">
-        <item name="android:windowNoTitle">true</item>
+    <style name="AppTheme.NoActionBar.Transparent">
         <item name="android:windowBackground">@color/transparent</item>
         <item name="android:windowAnimationStyle">@android:style/Animation.Translucent</item>
         <item name="android:windowIsTranslucent">true</item>
