--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -16,6 +16,11 @@
         android:inAnimation="@anim/push_left_in"
         android:outAnimation="@anim/push_left_out">
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitXY"
+            android:src="@drawable/splash_image_1" />
 
         <ImageView
             android:layout_width="match_parent"
