--- a/MusicPlayer/src/main/res/layout/activity_local_music_list.xml
+++ b/MusicPlayer/src/main/res/layout/activity_local_music_list.xml
@@ -16,7 +16,7 @@
             android:id="@+id/appBarLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.AppBarOverlay">
+            android:theme="@style/MusicPlayerAppTheme.AppBarOverlay">
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
